--- a/web/templates/includes/navbar.html
+++ b/web/templates/includes/navbar.html
@@ -15,7 +15,7 @@
                         <a class="nav-link active" href="{% url 'home' %}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="https://www.django-cloud.pminnovest.com/">In react</a>
+                        <a class="nav-link" href="https://www.django-cloud.pminnovest.com/">In react</a>
                     </li>
                     {% include "includes/user_link.html" %}
                 </ul>
