Second Commit: Production mode

--- a/web/templates/400.html
+++ b/web/templates/400.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
-    <div class="container my-5">
-        <div class="p-5 text-center bg-body-tertiary rounded-3">
-            <h1 class="text-body-emphasis">400 Bad Request</h1>
-        </div>
+<div class="container my-5">
+    <div class="p-5 text-center">
+        <h1 class="text-body-emphasis">400 Bad Request</h1>
     </div>
+</div>
 {% endblock content %}
