--- a/web/templates/500.html
+++ b/web/templates/500.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
-    <div class="container my-5">
-        <div class="p-5 text-center bg-body-tertiary rounded-3">
-            <h1 class="text-body-emphasis">500 Internal server error</h1>
-            <p class="col-lg-8 mx-auto fs-5 text-muted">We have been notified and are working on a fix.</p>
-        </div>
+<div class="container my-5">
+    <div class="p-5 text-center">
+        <h1 class="text-body-emphasis">500 Internal server error</h1>
+        <p class="col-lg-8 mx-auto fs-5 text-muted">We have been notified and are working on a fix.</p>
     </div>
+</div>
 {% endblock content %}
